# rv32m1_ri5cy-pac

./: Cargo.toml  README.md  update.ps1
src/: adc0.rs  axbs0.rs  cau3.rs  crc.rs  dma0.rs  dmamux0.rs  emvsim0.rs  ewm.rs  fb.rs  flexio0.rs  ftfe.rs  generic.rs  gpioa.rs  i2s0.rs  interrupt.rs  lib.rs  llwu1.rs  lpcmp1.rs  lpdac0.rs  lpi2c0.rs  lpit1.rs  lpspi0.rs  lptmr0.rs  lpuart1.rs  mcm0.rs  mscm.rs  mua.rs  pcc0.rs  pcc1.rs  porta.rs  portb.rs  portc.rs  portd.rs  porte.rs  rsim.rs  rtc.rs  scg.rs  sema421.rs  sim.rs  smc0.rs  (+14 more)
src/adc0/: cfg.rs  cmdh1.rs  cmdh10.rs  cmdh11.rs  cmdh12.rs  cmdh13.rs  cmdh14.rs  cmdh15.rs  cmdh2.rs  cmdh3.rs  cmdh4.rs  cmdh5.rs  cmdh6.rs  cmdh7.rs  cmdh8.rs  cmdh9.rs  cmdl1.rs  cmdl10.rs  cmdl11.rs  cmdl12.rs  cmdl13.rs  cmdl14.rs  cmdl15.rs  cmdl2.rs  cmdl3.rs  cmdl4.rs  cmdl5.rs  cmdl6.rs  cmdl7.rs  cmdl8.rs  cmdl9.rs  ctrl.rs  cv.rs  de.rs  fctrl.rs  ie.rs  ofstrim.rs  param.rs  pause.rs  resfifo.rs  (+4 more)
src/axbs0/: crs0.rs  crs1.rs  crs2.rs  crs3.rs  crs4.rs  mgpcr0.rs  mgpcr1.rs  mgpcr2.rs  mgpcr3.rs  mgpcr4.rs  mgpcr5.rs  prs0.rs  prs1.rs  prs2.rs  prs3.rs  prs4.rs
src/cau3/: arr.rs  cc_cf.rs  cc_cmd.rs  cc_pc.rs  cc_r0.rs  cc_r1.rs  cc_r10.rs  cc_r11.rs  cc_r12.rs  cc_r13.rs  cc_r14.rs  cc_r15.rs  cc_r16.rs  cc_r17.rs  cc_r18.rs  cc_r19.rs  cc_r2.rs  cc_r20.rs  cc_r21.rs  cc_r22.rs  cc_r23.rs  cc_r24.rs  cc_r25.rs  cc_r26.rs  cc_r27.rs  cc_r28.rs  cc_r29.rs  cc_r3.rs  cc_r30.rs  cc_r31.rs  cc_r4.rs  cc_r5.rs  cc_r6.rs  cc_r7.rs  cc_r8.rs  cc_r9.rs  cha_vid.rs  cklfsr.rs  com.rs  cr.rs  (+36 more)
src/crc/: ctrl.rs  data.rs  gpoly.rs
(+1177 files in other folders)
